--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,32 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
 
+    services:
+        postgres:
+          image: postgres:12
+          env:
+            POSTGRES_USER: root
+            POSTGRES_PASSWORD: secret
+            POSTGREST_DB: simple_bank
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+
+    steps:
+    
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v4
+
+    - name: Run migrations
+      run: make migrateup
 
     - name: Test
       run: make test
